--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -223,11 +223,12 @@
   width: 100%;
   height: 100%; 
   object-fit: cover; /* Cover the container */
-  /* Keep existing transition and position styles */
+  display: block; /* Remove extra space below image/video */
   transition: opacity 0.5s ease-in-out; /* Add transition for image rotation */
   position: absolute; /* Position images on top of each other */
   top: 0;
   left: 0;
+  transform: scale(1.20); /* Zoom in by 20% */
 }
 
 .projectContent {
